// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > ADD_DAYS(TODAY(), 7) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-28 │
└───┴────────────┘
"
`;

exports[`@example tests > ADD_HOURS(NOW(), 8) 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 16:15:20 │
└───┴─────────────────────┘
"
`;

exports[`@example tests > DAY(TODAY()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 21 │
└───┴────┘
"
`;

exports[`@example tests > HOUR(NOW()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 8 │
└───┴───┘
"
`;

exports[`@example tests > MINUTE(NOW()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 15 │
└───┴────┘
"
`;

exports[`@example tests > MONTH(TODAY()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`@example tests > NOW() 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 08:15:20 │
└───┴─────────────────────┘
"
`;

exports[`@example tests > SECOND(NOW()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 20 │
└───┴────┘
"
`;

exports[`@example tests > SUB_DAYS(TODAY(), 7) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-14 │
└───┴────────────┘
"
`;

exports[`@example tests > SUB_HOURS(NOW(), 8) 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 00:15:20 │
└───┴─────────────────────┘
"
`;

exports[`@example tests > TIME() 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ 08:15:20 │
└───┴──────────┘
"
`;

exports[`@example tests > TODAY() 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-21 │
└───┴────────────┘
"
`;

exports[`@example tests > YEAR(TODAY()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ 2013 │
└───┴──────┘
"
`;
